--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,18 @@ Thumbs.db
 
 # OSS Review Toolkit
 ort/
+
+# Logs
+pnpm-debug.log*
+
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
