--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
   "name": "@porsche-design-system/patterns",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "vite": "^5.0.0"
+  },
   "packageManager": "yarn@4.0.0-rc.48"
 }
