--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "@porsche-design-system/components-js": "^3.8.0"
+  },
   "devDependencies": {
+    "sass": "^1.69.5",
     "vite": "^5.0.0"
   },
   "packageManager": "yarn@4.0.0-rc.48"
