--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Build & Deploy
 
 on:
   # Runs on pushes targeting the default branch
@@ -31,12 +31,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install
+        run: yarn install --frozen-lockfile
+      - name: Build
+        run: yarn build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # Upload dist folder of repository
           path: './docs'
       - name: Deploy to GitHub Pages
         id: deployment
