--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "sass": "^1.69.5",
     "vite": "^5.0.0"
   },
-  "packageManager": "yarn@4.0.0-rc.48"
+  "volta": {
+    "node": "18.18.1",
+    "yarn": "1.22.19"
+  }
 }
