chore: add caching of node_modules in CI | sas

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: 'Cache node_modules'
+        if: inputs.install == 'true'
+        uses: actions/cache@v3
+        id: cache-node_modules
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       - name: Install
+        if: inputs.install == 'true' && steps.cache-node_modules.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile
       - name: Build
         run: yarn build
