--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,10 +38,10 @@ jobs:
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
-      - name: 'Install'
+      - name: 'Install node_modules'
         if: steps.cache-node_modules.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile
-      - name: 'Build'
+      - name: 'Build patterns'
         run: yarn build
       - name: 'Setup Pages'
         uses: actions/configure-pages@v3
