--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@porsche-design-system/components-js": "^3.8.0"
+    "@porsche-design-system/components-js": "^3.10.0-rc.0"
   },
   "devDependencies": {
     "sass": "^1.69.5",
