--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@porsche-design-system/components-js": "^3.10.0-rc.3"
+    "@porsche-design-system/components-js": "^3.14.0"
   },
   "devDependencies": {
     "@porsche-design-system/prettier-config": "^1.0.0",
-    "prettier": "^3.1.0",
-    "sass": "^1.69.5",
-    "vite": "^5.0.0"
+    "prettier": "^3.2.5",
+    "sass": "^1.75.0",
+    "vite": "^5.2.8"
   },
   "volta": {
     "node": "18.18.1",
