--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp -r ./dist/patterns/. ./dist && rm -rf ./dist/patterns",
     "preview": "vite preview"
   },
   "dependencies": {
