--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
       - name: 'Install node_modules'
         if: steps.cache-node_modules.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile
-      - name: 'Build patterns'
+      - name: 'Build'
         run: yarn build
       - name: 'Setup Pages'
         uses: actions/configure-pages@v3
