--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@porsche-design-system/components-js": "^3.22.1-rc.0"
+    "@porsche-design-system/components-js": "^3.22.1"
   },
   "devDependencies": {
     "@porsche-design-system/prettier-config": "^1.0.0",
-    "prettier": "^3.3.3",
-    "sass": "^1.80.4",
+    "prettier": "^3.4.2",
+    "sass": "^1.82.0",
     "vite": "^6.0.3"
   },
   "volta": {
