--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,6 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     name: 'Build & Deploy'
     environment:
@@ -41,14 +40,16 @@ jobs:
       - name: 'Install node_modules'
         if: steps.cache-node_modules.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile
+      - name: 'Lint'
+        run: yarn lint
       - name: 'Build'
         run: yarn build
       - name: 'Setup Pages'
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
       - name: 'Upload artifact'
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: './dist'
       - name: 'Deploy to GitHub Pages'
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
