--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "build": "vite build && cp -r ./dist/src/. ./dist && rm -rf ./dist/src",
     "preview": "vite preview",
     "format": "biome format",
-    "lint": "biome lint"
+    "lint": "biome lint",
+    "test:e2e": "playwright test --config=tests/e2e/config/playwright.config.ts"
   },
   "dependencies": {
     "@porsche-design-system/components-js": "^3.22.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@playwright/test": "^1.49.1",
+    "@types/node": "^22.10.2",
     "sass": "^1.82.0",
     "vite": "^6.0.3"
   },
