--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview",
     "format": "biome format",
     "lint": "biome lint",
-    "test:e2e": "playwright test --config=tests/e2e/config/playwright.config.ts"
+    "test:e2e": "playwright test --config=tests/e2e/config/playwright.config.ts",
+    "test:a11y": "playwright test --config=tests/a11y/config/playwright.config.ts"
   },
   "dependencies": {
     "@porsche-design-system/components-js": "^3.22.1"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.1",
     "@biomejs/biome": "^1.9.4",
     "@playwright/test": "^1.49.1",
     "@types/node": "^22.10.2",
