--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,8 +65,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shardIndex: [ 1, 2 ]
-        shardTotal: [ 2 ]
+        shardIndex: [ 1, 2, 3 ]
+        shardTotal: [ 3 ]
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v4
