--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:e2e": "playwright test --config=tests/e2e/config/playwright.config.ts",
     "test:a11y": "playwright test --config=tests/a11y/config/playwright.config.ts",
     "test:vrt": "playwright test --config=tests/vrt/config/playwright.config.ts",
+    "test:lh": "playwright test --config=tests/lh/config/playwright.config.ts",
     "docker": "docker compose -f docker-compose.yml -p porsche-design-system-templates run --service-ports --rm repository yarn \"${@}\""
   },
   "dependencies": {
@@ -22,8 +23,10 @@
     "@biomejs/biome": "^1.9.4",
     "@playwright/test": "^1.49.1",
     "@types/node": "^22.10.2",
+    "get-port": "^7.1.0",
+    "lighthouse": "^12.3.0",
     "sass": "^1.83.0",
-    "vite": "^6.0.3"
+    "vite": "^6.0.5"
   },
   "volta": {
     "node": "22.12.0",
