--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,8 +95,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shardIndex: [ 1, 2, 3 ]
-        shardTotal: [ 3 ]
+        shardIndex: [ 1, 2, 3, 4 ]
+        shardTotal: [ 4 ]
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v4
