--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "docker": "docker compose -f docker-compose.yml -p porsche-design-system-templates run --service-ports --rm repository yarn \"${@}\""
   },
   "dependencies": {
-    "@porsche-design-system/components-js": "^3.26.0"
+    "@porsche-design-system/components-js": "^3.26.0",
+    "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.1",
     "@biomejs/biome": "^1.9.4",
     "@playwright/test": "^1.50.1",
+    "@tailwindcss/postcss": "^4.0.8",
+    "@tailwindcss/vite": "^4.0.8",
     "@types/node": "^22.13.5",
     "get-port": "^7.1.0",
     "lighthouse": "^12.3.0",
+    "postcss": "^8.5.3",
     "sass": "^1.85.1",
     "vite": "^6.2.0"
   },
