--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[*.{js,ts,json,yml,html,scss}]
+[*.{js,ts,json,yml,html,scss,css,svg}]
 charset = utf-8
 indent_style = space
 indent_size = 2
