feat: update npm dependencies | sas

--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
     "docker": "docker compose -f docker-compose.yml -p porsche-design-system-templates run --service-ports --rm repository yarn \"${@}\""
   },
   "dependencies": {
-    "@porsche-design-system/components-js": "^3.27.3",
-    "tailwindcss": "^4.0.17"
+    "@porsche-design-system/components-js": "^3.28.0-rc.3",
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.1",
     "@biomejs/biome": "^1.9.4",
-    "@playwright/test": "^1.51.1",
-    "@tailwindcss/postcss": "^4.0.17",
-    "@tailwindcss/vite": "^4.0.17",
-    "@types/node": "^22.13.14",
+    "@playwright/test": "^1.52.0",
+    "@tailwindcss/postcss": "^4.1.7",
+    "@tailwindcss/vite": "^4.1.7",
+    "@types/node": "^22.15.21",
     "get-port": "^7.1.0",
-    "lighthouse": "^12.5.1",
+    "lighthouse": "^12.6.0",
     "postcss": "^8.5.3",
-    "sass": "^1.86.0",
-    "tsx": "^4.19.3",
-    "vite": "^6.2.3"
+    "sass": "^1.89.0",
+    "tsx": "^4.19.4",
+    "vite": "^6.3.5"
   },
   "volta": {
     "node": "22.12.0",
