--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp -r ./dist/src/. ./dist && rm -rf ./dist/src",
+    "build": "vite build",
     "preview": "vite preview",
     "format": "biome format",
     "lint": "biome lint",
