fix: lint issues | sas

--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,13 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "all": true
+      "all": true,
+      "correctness": {
+        "useImportExtensions": "off"
+      },
+      "style": {
+        "noDefaultExport": "off"
+      }
     }
   },
   "javascript": {
