--- a/tests/a11y/specs/__snapshots__/ai-assistant-widget.a11y.ts/intro.aria.yml
+++ b/tests/a11y/specs/__snapshots__/ai-assistant-widget.a11y.ts/intro.aria.yml
@@ -3,16 +3,20 @@
   - heading "AI Assistant Widget" [level=1]
 - button "open / close ai assistant" [expanded]
 - complementary "AI Assistant":
-  - heading "I'm the AI Assistant of Porsche." [level=2]
-  - paragraph: How can I help you?
-  - link "How can I use Plug & Charge for my Macan Electric?"
-  - link "What is the Porsche Data Pass?"
+  - heading "Good to see you." [level=2]
+  - heading "How can I assist you?" [level=2]
+  - paragraph: My car is not starting
+  - paragraph: I lost my charging card
+  - paragraph: I want to go on a trip to Switzerland
   - button "Upload media"
   - textbox "Message AI Assistant"
   - button "Use microphone"
   - status
   - button "Ask AI Assistant"
   - status
-  - link "My inquiries"
-  - link "Contact"
-  - link "Terms of Use"
+  - link "My inquiries":
+    - /url: "#template-my-inquiries"
+  - link "Contact":
+    - /url: "#template-contact"
+  - link "Terms of Use":
+    - /url: "#template-terms-of-use"
