--- a/tests/a11y/specs/__snapshots__/ai-assistant-widget.a11y.ts/login.aria.yml
+++ b/tests/a11y/specs/__snapshots__/ai-assistant-widget.a11y.ts/login.aria.yml
@@ -3,14 +3,13 @@
   - heading "AI Assistant Widget" [level=1]
 - button "open / close ai assistant" [expanded]
 - complementary "AI Assistant":
-  - paragraph: Good to see you.
-  - paragraph: How can I assist you?
+  - heading "Good to see you. How can I assist you?" [level=2]
   - link "My car is not starting":
-    - /url: "#template-intro"
+    - /url: "#template-chat"
   - link "I lost my charging card":
-    - /url: "#template-intro"
+    - /url: "#template-chat"
   - link "I want to go on a trip to Switzerland":
-    - /url: "#template-intro"
+    - /url: "#template-chat"
   - link "Sign in":
     - /url: "#template-intro"
   - paragraph: I’m an artificial intelligence, not a human, so please use my answers with care.
