--- a/tests/a11y/specs/__snapshots__/ai-assistant-widget.a11y.ts/intro.aria.yml
+++ b/tests/a11y/specs/__snapshots__/ai-assistant-widget.a11y.ts/intro.aria.yml
@@ -3,11 +3,13 @@
   - heading "AI Assistant Widget" [level=1]
 - button "open / close ai assistant" [expanded]
 - complementary "AI Assistant":
-  - heading "Good to see you." [level=2]
-  - heading "How can I assist you?" [level=2]
-  - paragraph: My car is not starting
-  - paragraph: I lost my charging card
-  - paragraph: I want to go on a trip to Switzerland
+  - heading "Good to see you. How can I assist you?" [level=2]
+  - link "My car is not starting":
+      - /url: "#template-chat"
+  - link "I lost my charging card":
+      - /url: "#template-chat"
+  - link "I want to go on a trip to Switzerland":
+      - /url: "#template-chat"
   - button "Upload media"
   - textbox "Message AI Assistant"
   - button "Use microphone"
