feat: enable branch deployment | sas / jmn

--- a/.github/workflows/push-pull-request.yml
+++ b/.github/workflows/push-pull-request.yml
@@ -10,13 +10,13 @@ jobs:
   build:
     name: 'Build'
     uses: ./.github/workflows/build.yml
-  # test:
-  #   name: 'Test'
-  #   uses: ./.github/workflows/test.yml
-  #   needs:
-  #     - build
+  test:
+    name: 'Test'
+    uses: ./.github/workflows/test.yml
+    needs:
+      - build
   deploy:
     name: 'Deploy'
     uses: ./.github/workflows/deploy.yml
     needs:
-      - build
+      - test
