--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,18 +14,18 @@ jobs:
           ref: 'gh-pages'
       - name: 'Clean up'
         run: |
-          rm -rf "./${GITHUB_REF_NAME}"
+          rm -rf "./${{ github.ref_name }}"
         shell: bash
       - name: 'Download build artifact'
         uses: actions/download-artifact@v4
         with:
           name: templates
-          path: "./${GITHUB_REF_NAME}"
+          path: "./${{ github.ref_name }}"
       - name: 'Deploy'
         run: |
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git add -A
-          git commit -m "Automated deployment to GitHub Pages (${GITHUB_REF_NAME}): ${GITHUB_SHA}" --allow-empty
+          git commit -m "Automated deployment to GitHub Pages (${{ github.ref_name }}): ${{ github.sha }}" --allow-empty
           git push origin gh-pages --force
         shell: bash
