--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,8 @@ on:
   workflow_call:
 
 jobs:
-  templates:
-    name: 'Templates'
+  build-development:
+    name: 'Development'
     runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/playwright:v1.52.0
@@ -22,4 +22,23 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: templates
+          path: ./dist
+  build-production:
+    name: 'Production'
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.52.0
+      options: --user 1001
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@v4
+      - name: 'Setup and install'
+        uses: ./.github/actions/setup-and-install
+      - name: 'Build (Prod)'
+        run: BASE_PATH=/templates/${{ github.ref_name }}/ yarn build
+        shell: bash
+      - name: 'Upload build artifact'
+        uses: actions/upload-artifact@v4
+        with:
+          name: templates-prod
           path: ./dist
