--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "docker": "docker compose -f docker-compose.yml -p porsche-design-system-templates run --service-ports --rm repository yarn \"${@}\""
   },
   "dependencies": {
-    "@porsche-design-system/components-js": "^3.29.0",
+    "@porsche-design-system/components-js": "^3.30.0-rc.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
