--- a/tests/a11y/specs/__snapshots__/ai-assistant-widget.a11y.ts/intro.aria.yml
+++ b/tests/a11y/specs/__snapshots__/ai-assistant-widget.a11y.ts/intro.aria.yml
@@ -3,7 +3,7 @@
   - heading "AI Assistant Widget" [level=1]
 - button "open / close ai assistant" [expanded]
 - complementary "AI Assistant":
-  - button "Close":
+  - button "Close"
   - heading "Good to see you. How can I assist you?" [level=2]
   - link "My car is not starting":
       - /url: "#template-chat"
