--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "get-port": "^7.1.0",
     "lighthouse": "^12.6.0",
     "postcss": "^8.5.3",
+    "prettier": "^3.6.2",
     "sass": "^1.89.0",
     "tsx": "^4.19.4",
     "vite": "^6.3.5"
