--- a/tests/a11y/specs/__snapshots__/ai-assistant-widget.a11y.ts/terms-of-use.aria.yml
+++ b/tests/a11y/specs/__snapshots__/ai-assistant-widget.a11y.ts/terms-of-use.aria.yml
@@ -1,10 +1,36 @@
 - main:
   - img "Porsche"
-  - heading "AI Assistant Widget" [level=1]
+  - heading "Template" [level=1]
+  - heading "AI Assistant Widget" [level=2]
+  - paragraph:
+    - text: Built with Porsche Design System
+    - link "Components":
+      - /url: https://designsystem.porsche.com/v3/components/introduction/
+    - text: and styled with
+    - link "Tailwind CSS":
+      - /url: https://designsystem.porsche.com/v3/tailwindcss/introduction/
+    - text: . First, get the Porsche Design System
+    - link "up & running":
+      - /url: https://designsystem.porsche.com/v3/developing/introduction/
+    - text: . Then, simply copy the provided markup and styles directly into your project. Only the necessary JavaScript logic requires custom implementation.
+  - paragraph: /© \d+ Dr\. Ing\. h\.c\. F\. Porsche AG\./
+  - heading "Source Code:" [level=3]
+  - list:
+    - listitem:
+      - link "HTML":
+        - /url: https://github.com/porsche-design-system/templates/blob/main/src/ai-assistant-widget/index.html
+    - listitem:
+      - link "CSS":
+        - /url: https://github.com/porsche-design-system/templates/blob/main/src/ai-assistant-widget/style.css
+    - listitem:
+      - link "JS":
+        - /url: https://github.com/porsche-design-system/templates/blob/main/src/ai-assistant-widget/main.js
 - button "open / close ai assistant" [expanded]
 - complementary "AI Assistant":
-  - link "Back to chat"
-  - link "Start new chat"
+  - link "Back to chat":
+    - /url: javascript:history.back()
+  - link "Start new chat":
+    - /url: "#template-intro"
   - heading "AI Assistant Disclaimer" [level=2]
   - heading "General Information:" [level=3]
   - paragraph: The AI chatbot is an automated system powered by OpenAI. It is designed to provide information and assistance based on the public Tamr documentation. While we strive to provide accurate information through the AI chatbot, we cannot guarantee the accuracy, completeness, or up-to-date nature of the information provided. We recommend that you use responses as a starting point and verify the information in the linked public documentation sources.
