--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,20 +4,6 @@ on:
   workflow_call:
 
 jobs:
-  lint:
-    name: 'Lint'
-    runs-on: ubuntu-latest
-    container:
-      image: mcr.microsoft.com/playwright:v1.52.0
-      options: --user 1001
-    steps:
-      - name: 'Checkout'
-        uses: actions/checkout@v4
-      - name: 'Setup and install'
-        uses: ./.github/actions/setup-and-install
-      - name: 'Lint'
-        run: yarn lint
-        shell: bash
   e2e:
     name: 'E2E'
     runs-on: ubuntu-latest
@@ -27,15 +13,15 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v4
-      - name: 'Setup and install'
-        uses: ./.github/actions/setup-and-install
-      - name: 'Download build artifact'
+      - name: 'Install'
+        uses: ./.github/actions/install
+      - name: 'Download'
         uses: actions/download-artifact@v4
         with:
           name: templates
           path: ./dist
       - name: 'E2E'
-        run: yarn test:e2e
+        run: npm run test:e2e
         shell: bash
   a11y:
     name: 'A11y'
@@ -46,15 +32,15 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v4
-      - name: 'Setup and install'
-        uses: ./.github/actions/setup-and-install
-      - name: 'Download build artifact'
+      - name: 'Install'
+        uses: ./.github/actions/install
+      - name: 'Download'
         uses: actions/download-artifact@v4
         with:
           name: templates
           path: ./dist
       - name: 'A11y'
-        run: yarn test:a11y
+        run: npm run test:a11y
         shell: bash
   vrt:
     name: 'VRT'
@@ -70,15 +56,15 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v4
-      - name: 'Setup and install'
-        uses: ./.github/actions/setup-and-install
-      - name: 'Download build artifact'
+      - name: 'Install'
+        uses: ./.github/actions/install
+      - name: 'Download'
         uses: actions/download-artifact@v4
         with:
           name: templates
           path: ./dist
       - name: 'VRT'
-        run: yarn test:vrt --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
+        run: npm run test:vrt --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
         shell: bash
       - name: 'VRT Regression'
         if: failure()
@@ -100,15 +86,15 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@v4
-      - name: 'Setup and install'
-        uses: ./.github/actions/setup-and-install
-      - name: 'Download build artifact'
+      - name: 'Install'
+        uses: ./.github/actions/install
+      - name: 'Download'
         uses: actions/download-artifact@v4
         with:
           name: templates
           path: ./dist
       - name: 'LH'
-        run: yarn test:lh --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
+        run: npm run test:lh --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
         shell: bash
       - name: 'LH Regression'
         if: failure()
