--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["./yarn.lock"]
+    "ignore": ["./package-lock.json"]
   },
   "organizeImports": {
     "enabled": true
