fix: prevent deploy job from being executed for dependabot | sas

--- a/.github/workflows/contribution.yml
+++ b/.github/workflows/contribution.yml
@@ -15,5 +15,6 @@ jobs:
   deploy:
     name: 'Deploy'
     uses: ./.github/workflows/deploy.yml
+    if: github.actor != 'dependabot[bot]'
     needs:
       - test
