--- a/.github/workflows/ort.yml
+++ b/.github/workflows/ort.yml
@@ -10,9 +10,6 @@ on:
   #   - cron: "0 0 1 * *" # at 00:00 on day-of-month 1
   # workflow_dispatch: # enables manual run, - before manual run is triggered ensure step "Send ORT Analyzer Result to OSO" is disabled / commented out
 
-env:
-  OSO_AWS_ECR_REGISTRY: 936427553375.dkr.ecr.eu-central-1.amazonaws.com
-
 jobs:
   ort:
     name: 'ORT'
@@ -25,16 +22,16 @@ jobs:
       - name: "Login"
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.OSO_AWS_ECR_REGISTRY }}
+          registry: ${{ vars.OSO_AWS_ECR_REGISTRY }}
           username: ${{ secrets.OSO_AWS_ACCESS_KEY_ID }}
           password: ${{ secrets.OSO_AWS_SECRET_ACCESS_KEY }}
       - name: "Analyze"
         run: |
-          docker run --user root -v "$PWD":/project ${{ env.OSO_AWS_ECR_REGISTRY }}/ort:latest analyze -i /project -o /project/ort
+          docker run --user root -v "$PWD":/project ${{ vars.OSO_AWS_ECR_REGISTRY }}/ort:latest analyze -i /project -o /project/ort
         shell: bash
       - name: "Report"
         run: |
-          docker run --user root -v "$PWD":/project ${{ env.OSO_AWS_ECR_REGISTRY }}/ort:latest report -i /project/ort/analyzer-result.yml -o /project/ort -f StaticHtml
+          docker run --user root -v "$PWD":/project ${{ vars.OSO_AWS_ECR_REGISTRY }}/ort:latest report -i /project/ort/analyzer-result.yml -o /project/ort -f StaticHtml
         shell: bash
       - name: 'Upload'
         uses: actions/upload-artifact@v4
